thread local example.